@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.4.32 unreleased
+
+* update 'rails-omniauth' example application for Rails 4.1
+
 h2. 2.4.31 February 24, 2014
 
 * generate Devise registration forms after database migrations are complete
